--- a/style/blocks/_team.scss
+++ b/style/blocks/_team.scss
@@ -79,3 +79,20 @@
 		}
 	}
 }
+
+.is-style-shrink-first {
+	
+	.wp-block-svbk-profile {
+		margin-top: 0;
+		
+		.wp-block-svbk-profile__picture{
+			width: 200px;
+			height: 200px;
+		
+			img {
+				width: 200px;
+				height: 200px;
+			}
+		}
+	}
+}
